--- a/css/contsacts.css
+++ b/css/contsacts.css
@@ -1,4 +1,4 @@
-header {
+/* header {
     background-color: #333333;
     position: fixed;
     width: 100%;
@@ -38,4 +38,45 @@ main {
     grid-template-columns: 1fr minmax(500px, 1200px) 1fr;
     grid-template-rows: 80px auto 40vh 100px;
     margin-top: 110px;
+} */
+body {
+    margin: 0 auto;  
+}
+main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: minmax(200px, auto);
+    margin-top: 8em;
+    margin-bottom: 8em;
+    
+}
+.contact {
+    text-align: center;
+    padding-left: 70px;
+    padding-right: 70px;
+}
+.contact p {
+    font-size: 25px;
+    padding-left: 70px;
+    padding-right: 70px;
+    margin-top: 3em;
+}
+
+.contact img {
+    width: 40%;
+}
+.contact button {
+    margin-top: 3em;
+}
+.info {
+    text-align: center;
+}
+.info p {
+    font-size: 25px;
+    padding-left: 70px;
+    padding-right: 70px;
+}
+table {
+    text-align: center;
+    font-size: 25px;
 }
