--- a/css/items.css
+++ b/css/items.css
@@ -32,10 +32,43 @@
     text-decoration: none;
     color: lightseagreen;
 }
-.panda_links img {
-    /* padding: 40px; */
-}
+
 .panda_links p {
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
+}
+.panda_links h2 {
+    text-align: center;
+    font-size: 25px;
+}
+@media screen and (min-width:600px) and (max-width:767px) {
+    main {
+        display: flex;
+        flex-direction: column;
+        
+    }
+    .pandas {
+        display: flex;
+        flex-direction: column;
+    }
+    .pics {
+        padding-bottom: 2rem;
+    }
+    .info div {
+        padding-bottom: 2rem;
+    }
+}
+
+@media screen and (max-width: 599px) {
+    main {
+        display: flex;
+        flex-direction: column;
+        
+    }
+    .contact {
+        padding-bottom: 2rem;
+    }
+    .info div {
+        padding-bottom: 2rem;
+    }
 }
